--- a/css/uno.css
+++ b/css/uno.css
@@ -1386,7 +1386,9 @@ nav {
 		.navigation__item a:hover {
 			color: #FFF;
 			border-color: #FFF;
-			opacity: 1; }
+			opacity: 1;
+      background-color: #77bba5;
+      }
 
 .navigation--social {
 	margin-left: 1.5em; }
