--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,11 +20,11 @@
 
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
-              <li class="navigation__item"><a href="{{ site.baseurl }}/research" title="link to {{ site.title }} research" class="blog-button nav-button">Research</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}/publications" title="link to {{ site.title }} publications" class="blog-button">Publications</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}/about" title="link to {{ site.title }} about me" class="blog-button">About Me</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}/contact" title="link to {{ site.title }} contact me" class="blog-button">Contact Me</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
+              <li class="navigation__item"><a href="{{ site.url }}/research" title="link to {{ site.title }} research" class="blog-button nav-button">Research</a></li>
+              <li class="navigation__item"><a href="{{ site.url }}/publications" title="link to {{ site.title }} publications" class="blog-button">Publications</a></li>
+              <li class="navigation__item"><a href="{{ site.url }}/about" title="link to {{ site.title }} about me" class="blog-button">About Me</a></li>
+              <li class="navigation__item"><a href="{{ site.url }}/contact" title="link to {{ site.title }} contact me" class="blog-button">Contact Me</a></li>
+              <li class="navigation__item"><a href="{{ site.url }}#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
             </ul>
           </nav>
 
