--- a/_includes/header.html
+++ b/_includes/header.html
@@ -81,6 +81,18 @@
               </li>
             {% endif %}
 
+            {% if site.author.web %}
+              <!-- Website -->
+              <li class="navigation__item">
+              <a href="{{ site.author.web }}" title="RISC" target="_blank">
+                  <i class="icon icon-web"></i>
+                  <span class="label">Web</span>
+                </a>
+              </li>
+            {% endif %}
+
+
+
             <!-- RSS -->
             <li class="navigation__item">
               <a href="{{ "feed.xml" | prepend: site.baseurl }}" title="Subscribe" target="_blank">
