Add google scholar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -61,6 +61,16 @@
               </li>
             {% endif %}
 
+            {% if site.author.scholar %}
+              <!-- Google Scholar -->
+              <li class="navigation__item">
+                <a href="https://scholar.google.com/citations?user=4pWM03cAAAAJ&hl=en" title="Google Scholar" target="_blank">
+                  <i class="icon icon-social-linkedin"></i>
+                  <span class="label">Google Scholar</span>
+                </a>
+              </li>
+            {% endif %}
+
             {% if site.author.github_username %}
               <!-- GitHub -->
               <li class="navigation__item">
