--- a/_includes/header.html
+++ b/_includes/header.html
@@ -64,7 +64,7 @@
             {% if site.author.scholar %}
               <!-- Google Scholar -->
               <li class="navigation__item">
-                <a href="https://scholar.google.com/citations?user=4pWM03cAAAAJ&hl=en" title="Google Scholar" target="_blank">
+                <a href="{{site.author.scholar}}" title="Google Scholar" target="_blank">
                   <i class="icon icon-social-linkedin"></i>
                   <span class="label">Google Scholar</span>
                 </a>
