--- a/_includes/header.html
+++ b/_includes/header.html
@@ -66,7 +66,7 @@
               <!-- Google Scholar -->
               <li class="navigation__item">
                 <a href="{{site.author.scholar}}" title="Google Scholar" target="_blank">
-                  <i class="icon icon-social-linkedin"></i>
+                  <i class="icon icon-torsos-all"></i>
                   <span class="label">Google Scholar</span>
                 </a>
               </li>
