--- a/css/uno.css
+++ b/css/uno.css
@@ -1480,6 +1480,10 @@ i {
 *:focus {
 	outline: none; }
 
+.contactinput {
+	display: block;
+}
+
 input[type="text"],
 input[type="password"],
 input[type="datetime"],
