--- a/css/uno.css
+++ b/css/uno.css
@@ -1589,6 +1589,14 @@ input[type="submit"] {
 	input[type="tel"]:-ms-input-placeholder {
 		color: #cccccc; }
 
+
+
+input[type="submit"] {
+	margin: 10px;
+	width: 430px;
+	background-color: #123123;
+}
+
 @media all and (min-width: 1300px) {
 	.content-wrapper {
 		margin-left: 530px; } }
