--- a/css/uno.css
+++ b/css/uno.css
@@ -1598,6 +1598,10 @@ input[type="submit"] {
 	color: white;
 }
 
+alert {
+	margin: 10px;
+}
+
 @media all and (min-width: 1300px) {
 	.content-wrapper {
 		margin-left: 530px; } }
