--- a/_includes/header.html
+++ b/_includes/header.html
@@ -101,6 +101,18 @@
                 </a>
               </li>
             {% endif %}
+ 
+              
+              {% if site.author.web %}
+              <!-- Website -->
+              <li class="navigation__item">
+              <a href="{{ site.author.web }}" title="Resume" target="_blank">
+                  <i class="icon icon-pencil"></i>
+                  <span class="label">Web</span>
+                </a>
+              </li>
+            {% endif %}
+
 
 
 
