--- a/_includes/header.html
+++ b/_includes/header.html
@@ -97,7 +97,7 @@
               <!-- Website -->
               <li class="navigation__item">
               <a href="{{ site.author.web }}" title="Resume" target="_blank">
-                  <i class="icon icon-foot"></i>
+                  <i class="icon icon-pencil"></i>
                   <span class="label">Web</span>
                 </a>
               </li>
