--- a/_includes/header.html
+++ b/_includes/header.html
@@ -93,10 +93,10 @@
             {% endif %}
               
            
-             {% if site.author.web %}
+             {% if site.author.cv %}
               <!-- Website -->
               <li class="navigation__item">
-              <a href="{{ site.author.web }}" title="Resume" target="_blank">
+              <a href="{{ site.author.cv }}" title="Resume" target="_blank">
                   <i class="icon icon-pencil"></i>
                   <span class="label">Web</span>
                 </a>
