--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,8 +13,7 @@
           <h1 class="panel-cover__title panel-title">{{ site.title }}</h1>
         </a>
         <hr class="panel-cover__divider">
-      <p class="panel-cover__description" 
-         style="margin-left: 20px;margin-right: 20px;">{{ site.description }}</p>
+      <p class="panel-cover__description">{{ site.description }}</p>
         <hr class="panel-cover__divider panel-cover__divider--secondary">
 
         <div class="navigation-wrapper">
