--- a/css/uno.css
+++ b/css/uno.css
@@ -1236,7 +1236,7 @@ hr {
 	margin-bottom: .2em; }
 
 .panel-cover__description {
-  	font-size: 2.5em;
+  	/*font-size: 2.5em;*/
 	margin: 0 20px; }
 
 .panel-cover--collapsed .panel-cover__description {
