--- a/css/uno.css
+++ b/css/uno.css
@@ -1101,8 +1101,8 @@ pre {
 
 .content-wrapper {
 	z-index: 800;
-	width: 100%;
-	max-width: 800px;
+	width: 65%;
+	max-width: none;
 	margin-left: 31.7%; }
 
 .content-wrapper__inner {
