Updated site twitter:title to increase name frequency

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="{{ site.title }}">
+  <meta name="twitter:title" content="Himanshu Aggrawal">
   <meta name="twitter:description" content="{{ site.description }}">
 
   <meta property="og:type" content="article">
