Updated site twitter:description to increase name frequency

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Himanshu Aggrawal">
-  <meta name="twitter:description" content="{{ site.description }}">
+  <meta name="twitter:description" content="Personal Website of Himanshu Aggrawal">
 
   <meta property="og:type" content="article">
   <meta property="og:title" content="{{ site.title }}">
