--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,8 +17,8 @@
   <meta name="twitter:description" content="Personal Website of Himanshu Aggrawal">
 
   <meta property="og:type" content="article">
-  <meta property="og:title" content="{{ site.title }}">
-  <meta property="og:description" content="{{ site.description }}">
+  <meta property="og:title" content="Himanshu Aggrawal">
+  <meta property="og:description" content="Personal Website of Himanshu Aggrawal">
 
   <link rel="apple-touch-icon" sizes="57x57" href="{{ "images/favicons/apple-touch-icon-57x57.png" | prepend: site.baseurl }}">
   <link rel="apple-touch-icon" sizes="60x60" href="{{ "images/favicons/apple-touch-icon-60x60.png" | prepend: site.baseurl }}">
