Added a line break between main & social buttons

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@
               <li class="navigation__item nav-fixed-width"><a href="{{ site.baseurl }}/contact" title="link to {{ site.title }} contact me" class="blog-button">Contact</a></li>
             </ul>
           </nav>
-
+			<br> <!-- Added a line break between main & social buttons  -->
           <nav class="cover-navigation navigation--social">
             <ul class="navigation">
 
