Testing new page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
               <li class="navigation__item nav-fixed-width"><a href="{{ site.baseurl }}/research" title="link to {{ site.title }} research" class="blog-button nav-button">Research</a></li>
               <li class="navigation__item nav-fixed-width"><a href="{{ site.baseurl }}/publications" title="link to {{ site.title }} publications" class="blog-button">Publications</a></li>
 				-->
-              <li class="navigation__item nav-fixed-width"><a href="{{ site.baseurl }}/favourites" title="link to {{ site.title }} favourites" class="blog-button">News</a></li>
+              <li class="navigation__item nav-fixed-width"><a href="{{ site.baseurl }}/news" title="link to {{ site.title }} favourites" class="blog-button">Favourite</a></li>
               <li class="navigation__item nav-fixed-width"><a href="{{ site.baseurl }}/news" title="link to {{ site.title }} news" class="blog-button">News</a></li>
               <!--<li class="navigation__item nav-fixed-width"><a href="{{ site.baseurl }}#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>-->
               <li class="navigation__item nav-fixed-width"><a href="{{ site.baseurl }}/about" title="link to {{ site.title }} about me" class="blog-button">About</a></li>
